# image_processor

./: Application.cpp  Application.h  Applier.cpp  Applier.h  BMP.h  Blur.cpp  CMakeLists.txt  Crop.cpp  EdgeDetection.cpp  Filters.h  FishEye.cpp  GlassDistortion.cpp  Grayscale.cpp  Image.cpp  Image.h  Negative.cpp  Parser.cpp  Parser.h  Pixel.cpp  Pixel.h  Pixelation.cpp  Reader.cpp  Reader.h  Sharpening.cpp  Writer.cpp  Writer.h  image_processor.cpp  units.cpp
